css for the profile page

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -637,6 +637,18 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+/* STUFF DOWN HERE MAY OR MAY NOT BE USED, MOSTLY NOT USED */
+
 .outerContainerPeople{
 
   /* margin-bottom: 15px; */
