--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -1,25 +1,155 @@
+
+
+/* CSS THAT IS SHARED BETWEEN ALL PROFILE PAGE */
 .profilePage{
   background-color: #f5f5f5;
-  position: absolute;
-  left:4%;
-  width: 1760px;
-  /* bottom: 30px; */
-  top: 5%;
-  padding-top: 40px;
-  /* align-items: center; */
-  /* z-index: 0; */
-  /* overflow: hidden; */
-  /* height: 100%; */
-  /* height: 1700px; */
-
+  position: relative;
+  width: 96vw;
+  height: 93vh;
+  top: 7%;
 }
+
+
+
+/* CSS for onRenderTabs
+STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
+ */
+.profile-tabContainer {
+  background-color: blue;
+ border-top: 1px solid #f0f0f0;
+ position:absolute;
+ top: 425px;
+ font-family: 'Segoe UI Regular';
+ bottom: 28px;
+ width: 100%;
+ height: 90%;
+ background-color: #ffffff;
+}
+
+
 .profilePage.active{
-  /* height: 95vh; */
   position: fixed;
   overflow-y: hidden;
 }
+.profileEventCard{
+  position: relative;
+  left: 50%;
+  top: 5%;
+  transform:translateX(-50%);
+  background: white;
+  line-height: 150%;
+  border-radius: 15px;
+  width: 80%;
+  font-family: 'Segoe UI Regular';
+  height: 250px;
+  background-color: gainsboro;
+}
+.parentFlexContainer{
+  display: flex;
+  height: 100%;
+  /* display: none; */
+  flex-direction: row;
+  background-color: red;
+  position: relative;
+}
+
+.parentFlexContainer .picFollowerHolder {
+  position:relative;
+  width:30%;
+  height: 100%;
+  background-color: orange;
+}
+
+.parentFlexContainer .nameBioHolder{
+  position:relative;
+  width:45%;
+
+  background-color: green;
+}
+
+.parentFlexContainer .buttonHolder{
+  position: relative;
+  width: 25%;
+  background-color: blue;
+}
 
 
+
+
+.profileName {
+  /* background-color: red; */
+  font-size: 25px;
+  font-weight: 400;
+  color: black;
+  position:relative;
+
+  top:25%;
+  transform: translateX(-50%);
+}
+.profileUserName{
+    font-size: 20px;
+    font-weight: 400;
+    position:relative;
+    color:grey;
+
+    top:25%;
+    transform: translateX(-50%);
+}
+.profileBio{
+  /* background-color: green; */
+  position: relative;
+  font-size: 18px;
+  font-weight: 400;
+  color: black;
+  top:50%;
+  transform: translateY(-50%);
+  /* background-color: green; */
+
+}
+
+/* CSS fro renderProfilePic */
+.profilePic{
+  width: 100%;
+  height: 65%;
+  z-index: 1;
+}
+.profilePic .picture{
+  position: relative;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  top: 50%;
+}
+
+/* CSS for renderEditButton */
+
+.editButton{
+  cursor: pointer;
+  font-size: 30px;
+  color: blue;
+  /* background-color: white; */
+  /* border: 1px black solid; */
+  width: 50px;
+  height: 50px;
+  /* border-radius: 50%; */
+  /* padding-left: 9px; */
+  /* padding-bottom: -10px; */
+  text-align: center;
+  position: absolute;
+  left: 80%;
+  top: 75%;
+  z-index: 1;
+}
+
+.editButton:hover {
+  transform: scale(1.1);
+}
+
+
+/* CSS for onRenderProfileInfo
+STILL SHARED BETWEEN EVERYONE
+ */
+
+ /* DELETE */
 .profileInfo{
   /* position: absolute; */
   margin-top: -50px;
@@ -33,25 +163,44 @@
   align-content: center;
   font-size: 20px;
   /* background-color: blue; */
-
 }
+.profilePostFollow{
+  position: relative;
+  width: 100%;
+  height: 35%;
+  background-color: red;
+  display: flex;
+  flex-direction: row;
+  color:black;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.followItem{
+  position: relative;
+  width: 50%;
+  cursor: pointer;
+  text-align: center;
+}
+.postFollowWords{
+  position: relative;
+  width: 100%;
 
-
+  color:blue;
+  font-weight: 400;
+  font-size: 18px;
+}
+.postFollowNum{
+  position: relative;
+  width: 100%;
+  color:blue;
+  font-weight: 400;
+  font-size: 18px;
+}
 .selfProfileButtons{
-  margin-top: -175px;
-  margin-right: 10px;
-  float:right;
+  position: relative;
+  top:25%;
   /* left: 50%; */
 }
-
-.dividerProfile{
-  color:red;
-  margin-bottom: 20px;
-  z-index: 3;
-}
-
-
-
 .profileButtons{
   /* background-color: red; */
   float:right;
@@ -66,17 +215,6 @@
 
   /* justify-content: center; */
 }
-
-
-
-.editProfile{
-  /* padding:50px; */
-  padding:10px;
-}
-
-
-
-
 .followButton{
   /* background-color: red; */
   padding-top: 4px;
@@ -92,9 +230,23 @@
   user-select: none;
   overflow: hidden;
 
-
 }
-
+.unFollowButton{
+  /* background-color: red; */
+  padding-top: 4px;
+  /* position: absolute; */
+  width: 200px;
+  height: 38px;
+  /* border: 1px solid; */
+  /* background: transparent; */
+  border-radius: 5px;
+  /* color: #fff; */
+  cursor: pointer;
+  user-select: none;
+  overflow: hidden;
+  z-index: 2;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+}
 .messageButton{
   /* background-color: red; */
   padding-top: 4px;
@@ -112,58 +264,69 @@
   /* box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
 }
 
-.unFollowButton{
-  /* background-color: red; */
-  padding-top: 4px;
-  /* position: absolute; */
-  width: 200px;
-  height: 38px;
-  /* border: 1px solid; */
-  /* background: transparent; */
-  border-radius: 5px;
-  /* color: #fff; */
-  cursor: pointer;
-  user-select: none;
-  overflow: hidden;
-  z-index: 2;
-  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+/* CSS for onRenderPrivate  */
+.privateAccountPage{
+  border-top: 1px solid #f0f0f0;
+  position:absolute;
+  top: 425px;
+  font-family: 'Segoe UI Regular';
+  bottom: 28px;
+  width: 1760px;
+  height: 90%;
+  background-color: #ffffff;
+  font-size: 25px;
+}
+.privateAccountPage .textHolder{
+  text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.addFriendButton {
-  /* background-color: red; */
-  padding-top: 4px;
-  /* position: absolute; */
-  width: 250px;
-  height: 38px;
-  /* border: 1px solid; */
-  background: deepskyblue;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-  user-select: none;
-  overflow: hidden;
-  z-index: 2;
-  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 
+.profile-tabPanel{
+  /* height: 85%; */
+  /* background-color: gray; */
+  color:#51565d;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  font-weight: 600;
+  font-size: 32px;
 }
 
-.unFriendButton {
-  /* background-color: red; */
-  padding-top: 4px;
-  /* position: absolute; */
-  width: 250px;
-  height: 38px;
-  /* border: 1px solid; */
-  background: deepskyblue;
-  border-radius: 5px;
-  color: #fff;
-  cursor: pointer;
-  user-select: none;
-  overflow: hidden;
-  z-index: 2;
-  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.dividerProfile{
+  color:red;
+  margin-bottom: 20px;
+  z-index: 3;
 }
+.editProfile{
+  /* padding:50px; */
+  padding:10px;
+}
+
+
 
 .following{
   /* background-color: red; */
@@ -171,84 +334,9 @@
   padding-top: 60px;
 }
 
-/* followers following count on profile */
-.profilePostFollow{
-  /* background-color: red; */
-  display: flex;
-  flex-direction: row;
-  color:black;
-  top:30px;
-  width: 250px;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: relative;
-  left: 19%;
-  transform: translateX(-50%);
-}
-
-.followItem{
-  flex-grow: 1;
-  flex-basis: 0;
-  cursor: pointer;
-}
-
-.postFollowWords{
-  color:black;
-  font-weight: 400;
-  font-size: 18px;
-}
-
-.background{
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: blue;
-  height: 200px;
-  width: 1760px;
-  overflow: hidden;
-}
-
-.backgroundImage {
-  height: ;
-  width: 100%;
-  position: absolute;
-  bottom: -100%;
-}
-
-
 .profilePageTopFlex{
   display: flex;
    flex-direction: row;
-}
-
-
-
-.profileEventCard{
-  position: relative;
-  overflow: hidden;
-  left:26%;
-  background: white;
-  line-height: 150%;
-  border-radius: 15px;
-  padding:25px;
-  max-width: 900px;
-  font-family: 'Segoe UI Regular';
-
-  /* background-color: gainsboro; */
-}
-
-
-.profileBio{
-  /* background-color: green; */
-  font-size: 18px;
-  font-weight: 400;
-  color: black;
-  margin-left: -75px;
-  margin-top: 130px;
-  width:375px;
-  height:25px;
-  /* background-color: green; */
-
 }
 
 .dividerContainer{
@@ -258,52 +346,12 @@
   margin-top: 200px;
 }
 
-.parentFlexContainer{
-  display: flex;
-   flex-direction: row;
-   margin-bottom: 20px;
-   margin-left: -125px;
-   /* background-color: red; */
-}
-.profileName {
-  /* background-color: red; */
-  font-size: 25px;
-  font-weight: 400;
-  color: black;
-  margin-left: -75px;
-  margin-top: 50px;
-
-
-}
 
 
 
-.profileUserName{
-    font-size: 20px;
-    font-weight: 400;
-    margin-top: 80px;
-    margin-left: -100px;
-    color:grey;
-}
-
-.profilePic{
-  /* background-color: yellow; */
-  margin-top: 10px;
-  margin-left: 300px;
-
-  width: 250px;
-  height: 180px;
 
 
-  /* bottom:45%; */
-  text-align: center;
-  transform: translateX(-50%);
-  /* overflow: hidden; */
-  /* margin: 2px; */
-  /* padding: 2px; */
-  /* border: 3px solid white; */
-  z-index: 1;
-}
+
 
 .profile-pic{
   height: 152%;
@@ -333,137 +381,14 @@
 
 
 
-.privateAccountPage{
-  border-top: 1px solid #f0f0f0;
-  position:absolute;
-  top: 425px;
-
-  font-family: 'Segoe UI Regular';
-
-  /* left: 40px; */
-  bottom: 28px;
-  width: 1760px;
-  height: 90%;
-  background-color: #ffffff;
-  font-size: 25px;
-}
-
-.privateAccountPage .textHolder{
-  text-align: center;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-
-/* This is for the tab changes */
-/* how far up the tab is */
-.profile-tabContainer {
-  border-top: 1px solid #f0f0f0;
-  position:absolute;
-  top: 425px;
-
-  font-family: 'Segoe UI Regular';
-
-  /* left: 40px; */
-  bottom: 28px;
-  width: 1760px;
-  height: 90%;
-  background-color: #ffffff;
-  /* background-color: red; */
-}
-
-
-.profile-tabContainer .profile-buttonContainer{
-
-  height: 60px;
-  /* width: 33.33%; */
-  width: 100%;
-  position: relative;
-  /* left: 33.33%; */
-  top: 2%;
-  display: flex;
-  text-align: center;
-  /* margin-top: 10px; */
-  /* background-color: red; */
-  /* color:red; */
-  padding-top: 20px;
-  margin-bottom: 10px;
-  /* padding-bottom: 5px; */
-  }
 
 
 
-.profile-tabContainer .profile-buttonContainer .profile-Tab{
-  width: 33.3333%;
-  /* width: 10px; */
-  height: 100%;
-  position: relative;
-  /* float:none; */
-  border-bottom: 1px grey solid;
-  /* border-radius: 25px; */
-  outline: none;
-  cursor: pointer;
-  /* padding: 10px; */
-  font-weight: 500;
-  font-family: "Segoe UI";
-  font-size: 20px;
-  /* background-color: #ffffff; */
-  /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
-}
 
-.profile-tabContainer .profile-buttonContainer .profile-Tab-Post{
-  width: 33.3333%;
-  /* width: 10px; */
-  height: 100%;
-  position: relative;
-  /* float:none; */
-  border-bottom: 3px grey solid;
-  /* border-radius: 25px; */
-  outline: none;
-  cursor: pointer;
-  /* padding: 10px; */
-  font-family: sans-serif;
-  font-size: 20px;
-  /* background-color: #ffffff; */
-  /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
-}
 
-.profile-tabContainer .profile-buttonContainer .profile-Tab-Calendar{
-  width: 33.3333%;
-  /* width: 10px; */
-  height: 100%;
-  position: relative;
-  /* float:none; */
-  border-bottom: 3px grey solid;
-  /* border-radius: 25px; */
-  outline: none;
-  cursor: pointer;
-  /* padding: 10px; */
-  font-family: "Segoe UI";
-  font-size: 20px;
 
-  /* background-color: #ffffff; */
-  /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
-}
 
-.profile-tabContainer .profile-buttonContainer .profile-Tab-Event{
-  width: 33.3333%;
-  /* width: 10px; */
-  height: 100%;
-  position: relative;
-  /* float:none; */
-  border-bottom: 3px grey solid;
-  /* border-radius: 25px; */
-  outline: none;
-  cursor: pointer;
-  /* padding: 10px; */
-  font-family: "Segoe UI";
-  font-size: 20px;
-  /* background-color: #ffffff; */
-  /* box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
-}
-gf
+
 .profile-description_tab{
   float: left;
 	width: 33.333%;
@@ -473,30 +398,10 @@ gf
 
 
 
-.profile-tabContainer .profile-buttonContainer button:hover {
-  background-color: #DCDCDC;
-}
+
 
 /* social calendar css */
-.profile-tabPanel{
-  /* height: 85%; */
-  /* background-color: gray; */
-  color:#51565d;
 
-  text-align: center;
-  align-items: center;
-  align-content: center;
-
-   /* font-family: Montserrat, "sans-serif"; */
-   color:grey;
-   font-weight: 600;
-  font-size: 32px;
-  /* color:red; */
-
-  /* display: none; */
-  /* overflow: auto; */
-  /* height: 850px; */
-}
 
 .followList{
   /* This is for the css for the follower and following list */
