--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -1,22 +1,222 @@
+/* CSS FOR SOCIAL CALENDAR */
 .socialCalContainer {
   position: relative;
 
-  width: 1700px;
+  width:100%;
   /* height: 920px; */
   left: 50%;
   transform: translateX(-50%);
-  background-color: blue;
   display: flex;
 }
+.socialCalendar {
+  display: block;
+  position: relative;
+  width: 100%;
+  margin-top: -20px;
+  /* background-color: red; */
+  background: var(--neutral-color);
+  /* border: 1px solid var(--border-color); */
+}
 
-.socialParent{
-  /* height:74vh; */
+/* CSS FOR THE SOCIAL CALENDAR HEADER */
+.socialCalendar .header {
+  font-weight: 500;
+  font-size: 15px;
+  padding: 1em 0;
+  color:black;
+  width: 100%;
+}
+/* will add more to this later */
+
+
+
+/* CSS FOR THE RENDER DAYS */
+.socialCalendar .days{
+  width: 1700px;
+  font-weight: 300;
+  font-family: "Segoe UI Regular";
+  color: ;
+  font-size: 18px;
+  border-bottom: 1px solid var(--border-color);
+  background-color: red;
+}
+/* will add more to this later */
+
+
+
+/* CSS FRO THE RENDERCELLS */
+.col {
 
 }
 
-/* .socialParent aside main{
-  height:10vh;
-} */
+
+.socialCalBody {
+  /* This is to control the width of the calendar socialCalBody */
+  background-color: white;
+  width: 1700px;
+}
+.socialCalBody .row {
+  border-bottom: 1px solid var(--border-color);
+}
+.socialCalBody .row .cell{
+  /* This is to control the height of each cell */
+  /* background-image: url("https://images.unsplash.com/photo-1594643566940-893b456ae452?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80"); */
+  position: relative;
+  height: 250px;
+  border-right: 1px solid var(--border-color);
+  overflow: hidden;
+  cursor: pointer;
+  text-align: left;
+  align-items: center;
+
+  background: red;
+  transition: 0.25s ease-out;
+  background-color: transparent;
+  flex-grow: 1;
+  flex-basis: 0;
+  max-width: 100%;
+
+}
+.socialCalBody .row .selected {
+  border: 1px solid #1890ff;
+}
+.socialCalBody .row .cell:first-child{
+  border-left: 1px solid var(--border-color)
+}
+.socialCalBody .row .cell .bg{
+  color: grey;
+  font-weight: 400;
+  font-size: 15px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 3;
+  /* background-color: red; */
+}
+
+.hoverCell{
+  width: 115%;
+  height: 100%;
+  margin-left: -15px;
+}
+.hoverCell:hover{
+  background-color: #D3D3D3cc;
+}
+.hoverCell .plusButton{
+  position:absolute;
+  left: 20%;
+  top: 45%;
+  color: transparent;
+  font-size: 40px;
+  z-index: 1;
+}
+.hoverCell .plusButton:hover{
+  transform: scale(1.2);
+}
+.hoverCell .eyeButton{
+  position:absolute;
+  left: 65%;
+  top: 45%;
+  color: transparent;
+  font-size: 40px;
+  z-index: 1;
+}
+.hoverCell .eyeButton:hover{
+  transform: scale(1.2)
+}
+
+.hoverCell .eventButton{
+  position:absolute;
+  left: 42%;
+  top: 45%;
+  color: transparent;
+  font-size: 40px;
+  z-index: 1;
+}
+ .hoverCell .eventButton:hover{
+  transform: scale(1.2)
+}
+
+.hoverCell .eventButtonAfter {
+  position:absolute;
+  left: 30%;
+  top: 45%;
+  color: transparent;
+  font-size: 40px;
+  z-index: 1;
+}
+.hoverCell .eventButtonAfter:hover{
+  transform: scale(1.2)
+}
+.hoverCell .eyeButtonAfter{
+  position:absolute;
+  left: 55%;
+  top: 45%;
+  color: transparent;
+  font-size: 40px;
+  z-index: 1;
+}
+.hoverCell .eyeButtonAfter:hover{
+  transform: scale(1.2)
+
+}
+.hoverCell .eyeButtonPass{
+  position:absolute;
+  left: 43%;
+  top: 45%;
+  color: transparent;
+  font-size: 40px;
+  z-index: 1;
+  /* transition: 0.5s; */
+}
+.hoverCell .eyeButtonPass:hover{
+  transform: scale(1.2)
+}
+
+.socialCalBody .row .cell .bgD{
+  color: white;
+  font-weight: 100;
+  font-size: 15px;
+  position: absolute;
+  left: 50%;
+  z-index: 3;
+}
+
+.hoverCell:hover .plusButton{
+  color: white;
+}
+.hoverCell:hover .eyeButton{
+  color: white;
+}
+.hoverCell:hover .eventButton{
+  color:white;
+}
+.hoverCell:hover .eyeButtonPass{
+  color: white;
+}
+.hoverCell:hover .eventButtonAfter{
+  color: white;
+}
+.hoverCell:hover .eyeButtonAfter{
+  color:white;
+}
+.hoverCell .imgCover {
+  position: absolute;
+  /* left: 20px; */
+  left: 0%
+}
+.hoverCell:hover .imgCover{
+  filter: brightness(60%);
+}
+
+
+
+
+/* CSS for social cal cell modal */
+
+
+
+
 
 
 .socialCalCellProfilePic{
@@ -30,24 +230,7 @@
 
 
 
-.socialCalendar {
-  display: block;
-  position: relative;
-  width: 100%;
-  margin-top: -20px;
-  /* background-color: red; */
-  background: var(--neutral-color);
-  /* border: 1px solid var(--border-color); */
-}
-.socialCalendar .header {
-  font-weight: 500;
-  font-size: 15px;
-  padding: 1em 0;
-  color:black;
-  /* border-bottom: 1px solid var(--border-color); */
-  /* background-color: blue; */
-  width: 100%;
-}
+
 .socialCalendar .header .icon {
   cursor: pointer;
   transition: .15s ease-out;
@@ -64,206 +247,9 @@
   margin-right: 1em;
 }
 
-.socialCalendar .days{
-  width: 1700px;
-  font-weight: 300;
-  font-family: "Segoe UI Regular";
-  color: ;
-  font-size: 18px;
-  border-bottom: 1px solid var(--border-color);
-  /* background-color: red; */
-}
 
 
-.socialCalendar .socialCalBody {
-  /* This is to control the width of the calendar socialCalBody */
-  background-color: white;
-  width: 1700px;
-}
-.socialCalendar .socialCalBody .row {
-  border-bottom: 1px solid var(--border-color);
-}
-.socialCalendar .socialCalBody .row .cell{
-  /* This is to control the height of each cell */
-  /* background-image: url("https://images.unsplash.com/photo-1594643566940-893b456ae452?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80"); */
-  position: relative;
-  height: 250px;
-  border-right: 1px solid var(--border-color);
-  overflow: hidden;
-  cursor: pointer;
-  text-align: left;
-  align-items: center;
 
-  /* background: var(--neutral-color); */
-  transition: 0.25s ease-out;
-  background-color: transparent;
-
-}
-
-/* .socialCalendar .socialCalBody .row .cell:hover {
-  background-color: #D3D3D3cc;
-
-} */
-
-.socialCalendar .socialCalBody .row .selected {
-  border: 1px solid #1890ff;
-}
-
-.socialCalendar .socialCalBody .row .cell:first-child{
-  border-left: 1px solid var(--border-color)
-}
-
-
-.socialCalendar .socialCalBody .row .cell .bg{
-  color: grey;
-  font-weight: 400;
-  font-size: 15px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 3;
-  /* background-color: red; */
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell .plusButton{
-  position:absolute;
-  left: 20%;
-  top: 45%;
-  color: transparent;
-  font-size: 40px;
-  z-index: 1;
-}
-
-
-.socialCalendar .socialCalBody .row .cell .hoverCell .plusButton:hover{
-  transform: scale(1.2);
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell .eyeButton{
-  position:absolute;
-  left: 65%;
-  top: 45%;
-  color: transparent;
-  font-size: 40px;
-  z-index: 1;
-
-  /* transition: 0.5s; */
-}
-.socialCalendar .socialCalBody .row .cell .hoverCell .eyeButton:hover{
-  transform: scale(1.2)
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell .eventButton{
-  position:absolute;
-  left: 42%;
-  top: 45%;
-  color: transparent;
-  font-size: 40px;
-  z-index: 1;
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell .eventButton:hover{
-  transform: scale(1.2)
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell .eventButtonAfter {
-  position:absolute;
-  left: 30%;
-  top: 45%;
-  color: transparent;
-  font-size: 40px;
-  z-index: 1;
-}
-.socialCalendar .socialCalBody .row .cell .hoverCell .eventButtonAfter:hover{
-  transform: scale(1.2)
-}
-.socialCalendar .socialCalBody .row .cell .hoverCell .eyeButtonAfter{
-  position:absolute;
-  left: 55%;
-  top: 45%;
-  color: transparent;
-  font-size: 40px;
-  z-index: 1;
-}
-.socialCalendar .socialCalBody .row .cell .hoverCell .eyeButtonAfter:hover{
-  transform: scale(1.2)
-
-}
-
-
-.socialCalendar .socialCalBody .row .cell .hoverCell .eyeButtonPass{
-  position:absolute;
-  left: 43%;
-  top: 45%;
-  color: transparent;
-  font-size: 40px;
-  z-index: 1;
-  /* transition: 0.5s; */
-}
-.socialCalendar .socialCalBody .row .cell .hoverCell .eyeButtonPass:hover{
-  transform: scale(1.2)
-}
-
-.socialCalendar .socialCalBody .row .cell .bgD{
-  color: white;
-  font-weight: 100;
-  font-size: 15px;
-  position: absolute;
-  left: 50%;
-  z-index: 3;
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell{
-  width: 115%;
-  height: 100%;
-  /* background-color: red; */
-  margin-left: -15px;
-  /* width: 100px; */
-  /* z-index: ; */
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell:hover{
-  /* width: 10px; */
-  /* height: 150px; */
-  background-color: #D3D3D3cc;
-  /* background-color: red; */
-  /* z-index: 3; */
-
-  /* background-color: #000000cc; */
-  /* filter: brightness(60%); */
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell:hover .plusButton{
-  color: white;
-}
-.socialCalendar .socialCalBody .row .cell .hoverCell:hover .eyeButton{
-  color: white;
-}
-.socialCalendar .socialCalBody .row .cell .hoverCell:hover .eventButton{
-  color:white;
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell:hover .eyeButtonPass{
-  color: white;
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell:hover .eventButtonAfter{
-  color: white;
-}
-.socialCalendar .socialCalBody .row .cell .hoverCell:hover .eyeButtonAfter{
-  color:white;
-}
-
-
-.socialCalendar .socialCalBody .row .cell .hoverCell .imgCover {
-  position: absolute;
-  /* left: 20px; */
-  left: 0%
-}
-
-.socialCalendar .socialCalBody .row .cell .hoverCell:hover .imgCover{
-  filter: brightness(60%);
-}
 
 .coverCellBox{
     /* background-color: red; */
