--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -42,14 +42,14 @@ STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
   width: 80%;
   font-family: 'Segoe UI Regular';
   height: 250px;
-  background-color: gainsboro;
+  /* background-color: gainsboro; */
 }
 .parentFlexContainer{
   display: flex;
   height: 100%;
   /* display: none; */
   flex-direction: row;
-  background-color: red;
+  /* background-color: red; */
   position: relative;
 }
 
@@ -57,20 +57,20 @@ STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
   position:relative;
   width:30%;
   height: 100%;
-  background-color: orange;
+  /* background-color: orange; */
 }
 
 .parentFlexContainer .nameBioHolder{
   position:relative;
   width:45%;
 
-  background-color: green;
+  /* background-color: green; */
 }
 
 .parentFlexContainer .buttonHolder{
   position: relative;
   width: 25%;
-  background-color: blue;
+  /* background-color: blue; */
 }
 
 
@@ -110,7 +110,7 @@ STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
 /* CSS fro renderProfilePic */
 .profilePic{
   width: 100%;
-  height: 65%;
+  height: 70%;
   z-index: 1;
 }
 .profilePic .picture{
@@ -166,9 +166,9 @@ STILL SHARED BETWEEN EVERYONE
 }
 .profilePostFollow{
   position: relative;
-  width: 100%;
-  height: 35%;
-  background-color: red;
+  width: 70%;
+  height: 30%;
+  /* background-color: red; */
   display: flex;
   flex-direction: row;
   color:black;
@@ -185,33 +185,28 @@ STILL SHARED BETWEEN EVERYONE
   position: relative;
   width: 100%;
 
-  color:blue;
+  /* color:blue; */
   font-weight: 400;
   font-size: 18px;
 }
 .postFollowNum{
   position: relative;
   width: 100%;
-  color:blue;
+  /* color:blue; */
   font-weight: 400;
   font-size: 18px;
 }
 .selfProfileButtons{
   position: relative;
-  top:25%;
+  width: 100%;
+  top: 25%;
   /* left: 50%; */
 }
 .profileButtons{
-  /* background-color: red; */
-  float:right;
-
-  height:200px;
-  width: 225px;
-  margin-top:-175px;
-  padding:10px;
+  top: 25%;
+  position: relative;
   display: flex;
-   flex-flow: column;
-    justify-content: space-around;
+  flex-flow: column;
 
   /* justify-content: center; */
 }
