--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -7,20 +7,31 @@
   width: 96vw;
   height: 93vh;
   top: 7%;
+  display: flex;
+  flex-direction: column;
 }
 
+.profilePage .topSectProfilePage{
+  /* background-color: red; */
+  position: relative;
+  height: 45%;
+}
+
+.profilePage .bottomSectProfilePage{
+  /* background-color: green; */
+  position: relative;
+  height: 55%;
+}
 
 
 /* CSS for onRenderTabs
 STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
  */
 .profile-tabContainer {
-  background-color: blue;
+ position: relative;
  border-top: 1px solid #f0f0f0;
- position:absolute;
- top: 425px;
+ position:relative;
  font-family: 'Segoe UI Regular';
- bottom: 28px;
  width: 100%;
  height: 90%;
  background-color: #ffffff;
@@ -34,14 +45,14 @@ STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
 .profileEventCard{
   position: relative;
   left: 50%;
-  top: 5%;
-  transform:translateX(-50%);
+  top: 50%;
+  transform:translateX(-50%) translateY(-50%);
   background: white;
   line-height: 150%;
   border-radius: 15px;
   width: 80%;
   font-family: 'Segoe UI Regular';
-  height: 250px;
+  height: 80%;
   /* background-color: gainsboro; */
 }
 .parentFlexContainer{
@@ -87,7 +98,7 @@ STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
   transform: translateX(-50%);
 }
 .profileUserName{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     position:relative;
     color:grey;
@@ -98,7 +109,7 @@ STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
 .profileBio{
   /* background-color: green; */
   position: relative;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   color: black;
   top:50%;
@@ -110,7 +121,7 @@ STILL SHARED BETWEEN ALL 3 PERSONAL PROFILES
 /* CSS fro renderProfilePic */
 .profilePic{
   width: 100%;
-  height: 70%;
+  height: 75%;
   z-index: 1;
 }
 .profilePic .picture{
@@ -167,7 +178,7 @@ STILL SHARED BETWEEN EVERYONE
 .profilePostFollow{
   position: relative;
   width: 70%;
-  height: 30%;
+  height: 25%;
   /* background-color: red; */
   display: flex;
   flex-direction: row;
@@ -187,14 +198,14 @@ STILL SHARED BETWEEN EVERYONE
 
   /* color:blue; */
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
 }
 .postFollowNum{
   position: relative;
   width: 100%;
   /* color:blue; */
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
 }
 .selfProfileButtons{
   position: relative;
@@ -262,12 +273,10 @@ STILL SHARED BETWEEN EVERYONE
 /* CSS for onRenderPrivate  */
 .privateAccountPage{
   border-top: 1px solid #f0f0f0;
-  position:absolute;
-  top: 425px;
+  position:relative;
   font-family: 'Segoe UI Regular';
-  bottom: 28px;
-  width: 1760px;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   background-color: #ffffff;
   font-size: 25px;
 }
