--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -125,38 +125,45 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 3;
-  /* background-color: red; */
 }
 
 .hoverCell{
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: calc(96vw/7);
+  height: calc(96vw/7);
 }
 .hoverCell:hover{
   background-color: #D3D3D3cc;
 }
 
 .hoverCell .buttonHolder{
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 50%;
+  transform: translateX(-50%) translateY(-50%);
   display: flex;
-  background-color: red;
   flex-direction: row;
+  z-index: 2;
 }
 
 .hoverCell .buttonHolder .plusButton{
   position: relative;
-
+  width: calc(100%/3);
   color: transparent;
-  font-size: 35px;
+  font-size: 100%;
   z-index: 1;
 }
 .hoverCell .buttonHolder .plusButton:hover{
   transform: scale(1.2);
 }
 .hoverCell .buttonHolder .eyeButton{
-  position:relative;
+  position: relative;
   color: transparent;
-  font-size: 35px;
+  width: calc(100%/3);
+
+  font-size: 100%;
   z-index: 1;
 }
 .hoverCell .buttonHolder .eyeButton:hover{
@@ -164,10 +171,11 @@
 }
 
 .hoverCell .buttonHolder .eventButton{
-  position:relative;
-
+  position: relative;
   color: transparent;
-  font-size: 35px;
+  width: calc(100%/3);
+
+  font-size: 100%;
   z-index: 1;
 }
  .hoverCell .buttonHolder .eventButton:hover{
@@ -199,15 +207,16 @@
 }
 .hoverCell .eyeButtonPass{
   position:absolute;
-  left: 43%;
-  top: 45%;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
   color: transparent;
   font-size: 40px;
   z-index: 1;
   /* transition: 0.5s; */
 }
 .hoverCell .eyeButtonPass:hover{
-  transform: scale(1.2)
+  transform: translateX(-50%) translateY(-50%) scale(1.2);
 }
 
 .socialCalBody .row .cell .bgD{
@@ -216,6 +225,7 @@
   font-size: 15px;
   position: absolute;
   left: 50%;
+  transform: translateX(-50%);
   z-index: 3;
 }
 
@@ -294,23 +304,23 @@
 
 
 .coverCellBox{
-    /* background-color: red; */
-  width: 250px;
+  position: relative;
+  width: 100%;
+  height: 82%;
   /* width: 100px;`` */
   /* padding: -100px; */
-  margin-left: -13px;
   overflow: auto;
-  height: 210px;
 }
 
 .coverCellBoxList {
   /* background-color: blue; */
-
+  position: relative;
+  width: 100%;
 }
 .coverCellBoxList .coverCellBoxItem {
   /* background-color: red; */
   margin: 2px;
-  width: 232px;
+  width: 99%;
   padding-left: 3px;
   border-radius: 5px;
   border: 1px solid gainsboro;
@@ -318,25 +328,49 @@
 
 }
 
+.eventBoxBox{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .eventBoxListHeader {
-  /* background-color: red; */
-  align-items: center;
-  text-align: center;
-  /* display: flex; */
-  /* flex-direction: column; */
+  position: relative;
+  height: 18%;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.eventBoxListHeader .bg{
+  color: grey;
+  font-weight: 400;
+  font-size: 15px;
+  position: relative;
+  width: 100%;
+  left: 50%;
+  height: 50%;
+  background-color: blue;
+  transform: translateX(-50%);
+  z-index: 3;
 }
 
 .eventBoxListHeader .buttonHolder {
   /* margin-top: 5px; */
   position: relative;
+
   /* left: 3px; */
+  height: 50%;
+
   left: 50%;
   transform: translateX(-50%);
-  padding-top:10px;
-  /* background-color: red; */
+  background-color: red;
 }
 
-.eventBoxListHeader .plusButton {
+.eventBoxListHeader .buttonHolder .plusButton {
   /* color: red; */
   /* position:absolute; */
   /* left: 20%; */
@@ -348,21 +382,28 @@
 
 }
 
-.eventBoxListHeader .plusButton:hover{
+.eventBoxListHeader .buttonHolder .plusButton:hover{
   transform: scale(1.2)
 
 }
-.eventBoxListHeader .eventButton {
+.eventBoxListHeader .buttonHolder .eventButton {
   /* color: gainsboro; */
   margin-left: 15px;
   margin-right: 15px;
   font-size: 24px;
 
 }
-.eventBoxListHeader .eyeButton {
+.eventBoxListHeader .buttonHolder .eventButton:hover{
+  transform: scale(1.2)
+
+}
+.eventBoxListHeader .buttonHolder .eyeButton {
   /* color: red; */
   font-size: 24px;
+}
 
+.eventBoxListHeader .buttonHolder .eyeButton:hover{
+  transform: scale(1.2)
 }
 .eventBoxListHeader .eventButtonAfter {
   /* color: red; */
@@ -399,7 +440,7 @@
 .coverEventCapacity .avatarContainer{
   /* background-color: blue; */
   /* position: relative; */
-  /* margin-left: 5px; */
+  margin-left: 5px;
 }
 
 .joinEventButtonCover{
