--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -1,10 +1,43 @@
 /* CSS used here will be applied after bootstrap.css */
-.badge-notify{
-   background:red;
-   position:relative;
-   top: -20px;
-   left: -35px;
-  }
+.ant-badge{
+  color:pink;
+  font-size: 10px;
+}
+.ant-badge-num{
+  color:blue;
+}
+.notification-box {
+  position: fixed;
+  z-index: 99;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+}
+
+.notification-count {
+  position: absolute;
+  z-index: 1;
+  top: -6px;
+  right: -6px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 18px;
+  border-radius: 50%;
+  background-color: #ff4927;
+  color: #fff;
+  animation: zoom 3s 3s both infinite;
+}
+
+
+@keyframes zoom {
+  0% { opacity: 0; transform: scale(0); }
+  10% { opacity: 1; transform: scale(1); }
+  50% { opacity: 1; }
+  51% { opacity: 0; }
+  100% { opacity: 0; }
+}
+
 .everythingContainer{
   /* background-color: pink; */
   display: flex;
