--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -244,11 +244,10 @@
   height: 100%;
 }
 
-.imgCover img{
+.hoverCell  .imgCover img{
   /* background-color: red; */
 
   object-fit: cover;
-  position:relative;
   width:100%;
   height:100%;
 }
