--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -1,11 +1,42 @@
 /* CSS used here will be applied after bootstrap.css */
+
+.badgeOuter{
+  position: absolute;
+}
+
 .ant-badge{
-  color:pink;
-  font-size: 10px;
+  position: relative;
+  display: inline-block;
+  line-height: 1;
+
 }
-.ant-badge-num{
-  color:blue;
+
+
+.ant-badge-count{
+  color:white;
+  padding:0;
+  padding-left: -5px;
+  font-weight:20;
+  white-space: nowrap;
+  text-align: center;
+  font-weight: normal;
+  position:absolute;
+  top:50%;
+
 }
+
+
+.ant-badge-count{
+
+  position:absolute;
+  top:50%;
+
+}
+
+.ant-badge-count-sm{
+  font-size: 2px;
+}
+
 .notification-box {
   position: fixed;
   z-index: 99;
@@ -14,19 +45,14 @@
   text-align: center;
 }
 
-.notification-count {
-  position: absolute;
-  z-index: 1;
-  top: -6px;
-  right: -6px;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  font-size: 18px;
-  border-radius: 50%;
-  background-color: #ff4927;
-  color: #fff;
-  animation: zoom 3s 3s both infinite;
+
+@keyframes bounce {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-15px);
+  }
 }
 
 
