--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   font-family: "Segoe UI Regular";
+
 }
 
 .calendarContainer .mainCalContainer{
@@ -326,15 +327,20 @@
 
 }
 
+.popoverFontWeight{
+  font-weight: 400;
+}
 
 .popOverSizeSolo{
   padding:20px;
    width:400px;
+   font-weight: 600;
 }
 
 .popOverSizeMultiple{
   padding:20px;
   width:450px;
+  font-weight: 600;
 }
 
 
@@ -659,9 +665,12 @@
   object-fit: cover;
   width:90px;
   height:90px;
-  border-radius: 10px;
-  margin-top: -140px;
+  border-radius: 5px;
+  margin-top: -150px;
   box-shadow:  0 10px 50px rgba(0, 0, 0, 0.1);
+  position: relative;
+  left:75%;
+
 }
 
 .buttonSize{
@@ -774,6 +783,31 @@ main {
 
 }
 
+
+.weekCalPopOverStat{
+  display: flex;
+  height: 100%;
+  width:100%;
+  left:55%;
+  transform: translateY(-20%);
+  /* display: none; */
+  flex-direction: row;
+  /* background-color: red; */
+  position: relative;
+}
+.weekCalPopOverFirst{
+  position: relative;
+  width:50%;
+  height:100%;
+  /* background-color: red; */
+}
+.weekCalPopOverSecond{
+  position: relative;
+  width:50%;
+  height:100%;
+  /* background-color: orange; */
+
+}
 /* Container that holds Calendar,
 controls all colors and font weight */
 
