--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -32,7 +32,7 @@
   /* height: 100; */
   top: 50%;
   width: 80%;
-  height: 90%;
+  height: 850px;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   z-index: 100;
@@ -223,6 +223,12 @@
   font-size: 45px;
 }
 
+.clipPicBackground {
+  position: relative;
+  height: 850px;
+  width: 100%;
+}
+
 .clipPicBackground .threeDot{
   position: absolute;
   right: 0%;
@@ -231,11 +237,63 @@
   z-index: 100;
 }
 
+.clipPicBackground .backgroundPic {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  filter: blur(20px);
+  overflow: hidden;
+  z-index: 0;
+
+}
+.clipPicBackground .clipPicturesRoll{
+  /* display: none; */
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  width: 80%;
+  background-color: white;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
+  /* box-shadow: 0 0px 0px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
+  /* border-radius: 10px; */
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+}
+
+.picturesRoll{
+  /* height:800px; */
+  /* background-color: #000000cc; */
+  overflow: hidden;
+  height: 850px;
+  position: relative;
+}
+
+
 .picturesRoll .threeDot{
   position: absolute;
   right:0%;
   z-index: 100;
   color:white;
+}
+.picturesRoll .socialImages{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  left: 50%;
+  transform: translateX(-50%);
+  /* display: none; */
+  /* top: 50%; */
+
 }
 
 
@@ -731,102 +789,13 @@
   /* width: 1100px; */
 }
 
-.picturesRoll{
-  /* height:800px; */
-  /* background-color: #000000cc; */
-  overflow: hidden;
-  height: 920px;
-  position: relative;
-}
-
-
-.clipPicBackground {
-  overflow: hidden;
-  height: 920px;
-  /* border: 1px solid black; */
-  /* background-color: black; */
-  position: relative;
-}
 
 
 
-.clipPicBackground .backgroundPic {
-  position: absolute;
-  /* height: %; */
-  width: 100%;
-  height: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  filter: blur(20px);
-  -webkit-filter: blur(20px);
-  z-index: 0;
-}
-
-.clipPicBackground .clipPicturesRoll{
-  /* display: none; */
-  overflow: hidden;
-  height: 920px;
-  width: 85%;
-  /* border: 1px solid black; */
-  background-color: white;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-
-  /* box-shadow: 0 0px 0px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
-  /* border-radius: 10px; */
-  z-index: 10;
-}
-
-.clipPicBackground .clipPicturesRoll .ownerHolder{
-  /* background-color: red; */
-  position: absolute;
-  left: 7.5%;
-  top: 5%;
-  display: flex;
-}
-.clipPicBackground .clipPicturesRoll .ownerHolder .ownerName{
-  position: relative;
-  left: 10%;
-
-
-}
 
 .socialCalCellUsername{
   font-weight: 600;
 }
-
-.picturesRoll .socialImages{
-  position: relative;
-  height: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  /* display: none; */
-  /* top: 50%; */
-
-}
-
-.clipPicBackground .clipPicturesRoll .polaroidHolder{
-  position: relative;
-  object-fit: cover;
-
-  left: 50%;
-  top: 15%;
-  transform: translateX(-50%);
-  /* border: 1px solid gray; */
-  height: 80%;
-  overflow: hidden;
-  width: 85%;
-
-}
-.clipPicBackground .clipPicturesRoll .polaroidHolder .socialImages{
-  position: relative;
-  height: 100%;
-  left: 50%;
-  transform: translateX(-50%)
-}
-
 
 .ant-upload-select-picture-card i {
   color: #999;
